hphp/hack/test/typecheck/void_usage.php
<?hh

function v(): void {}

function f(): bool {
  return 1 === v();
}
